tests/rpm-pkgs/libgcrypt-1.9.4-1.fc35/output-exp@cbmc/scan-results.err
Error: COMPILER_WARNING:
libgcrypt-1.9.4/cipher/sha256.c: scope_hint: In function 'do_sha256_transform_amd64_ssse3'
libgcrypt-1.9.4/cipher/sha256.c:157:10: warning[-Wstringop-overflow=]: '_gcry_sha256_transform_amd64_ssse3' accessing 32 bytes in a region of size 4
#  157 |          + ASM_EXTRA_STACK;
#      |          ^
libgcrypt-1.9.4/cipher/sha256.c:157:10: note: referencing argument 2 of type 'u32 *' {aka 'unsigned int *'}
libgcrypt-1.9.4/cipher/sha256.c:147:14: note: in a call to function '_gcry_sha256_transform_amd64_ssse3'
#  147 | unsigned int _gcry_sha256_transform_amd64_ssse3(const void *input_data,
#      |              ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
#  155|     SHA256_CONTEXT *hd = ctx;
#  156|     return _gcry_sha256_transform_amd64_ssse3 (data, &hd->h0, nblks)
#  157|->          + ASM_EXTRA_STACK;
#  158|   }
#  159|   #endif

Error: COMPILER_WARNING:
libgcrypt-1.9.4/cipher/sha256.c: scope_hint: In function 'do_sha256_transform_amd64_avx'
libgcrypt-1.9.4/cipher/sha256.c:172:10: warning[-Wstringop-overflow=]: '_gcry_sha256_transform_amd64_avx' accessing 32 bytes in a region of size 4
#  172 |          + ASM_EXTRA_STACK;
#      |          ^
libgcrypt-1.9.4/cipher/sha256.c:172:10: note: referencing argument 2 of type 'u32 *' {aka 'unsigned int *'}
libgcrypt-1.9.4/cipher/sha256.c:162:14: note: in a call to function '_gcry_sha256_transform_amd64_avx'
#  162 | unsigned int _gcry_sha256_transform_amd64_avx(const void *input_data,
#      |              ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
#  170|     SHA256_CONTEXT *hd = ctx;
#  171|     return _gcry_sha256_transform_amd64_avx (data, &hd->h0, nblks)
#  172|->          + ASM_EXTRA_STACK;
#  173|   }
#  174|   #endif

Error: COMPILER_WARNING:
libgcrypt-1.9.4/cipher/sha256.c: scope_hint: In function 'do_sha256_transform_amd64_avx2'
libgcrypt-1.9.4/cipher/sha256.c:187:10: warning[-Wstringop-overflow=]: '_gcry_sha256_transform_amd64_avx2' accessing 32 bytes in a region of size 4
#  187 |          + ASM_EXTRA_STACK;
#      |          ^
libgcrypt-1.9.4/cipher/sha256.c:187:10: note: referencing argument 2 of type 'u32 *' {aka 'unsigned int *'}
libgcrypt-1.9.4/cipher/sha256.c:177:14: note: in a call to function '_gcry_sha256_transform_amd64_avx2'
#  177 | unsigned int _gcry_sha256_transform_amd64_avx2(const void *input_data,
#      |              ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
#  185|     SHA256_CONTEXT *hd = ctx;
#  186|     return _gcry_sha256_transform_amd64_avx2 (data, &hd->h0, nblks)
#  187|->          + ASM_EXTRA_STACK;
#  188|   }
#  189|   #endif

Error: COMPILER_WARNING:
libgcrypt-1.9.4/cipher/sha256.c: scope_hint: In function 'do_sha256_transform_intel_shaext'
libgcrypt-1.9.4/cipher/sha256.c:203:10: warning[-Wstringop-overflow=]: '_gcry_sha256_transform_intel_shaext' accessing 32 bytes in a region of size 4
#  203 |   return _gcry_sha256_transform_intel_shaext (&hd->h0, data, nblks);
#      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
libgcrypt-1.9.4/cipher/sha256.c:203:10: note: referencing argument 1 of type 'u32 *' {aka 'unsigned int *'}
libgcrypt-1.9.4/cipher/sha256.c:194:1: note: in a call to function '_gcry_sha256_transform_intel_shaext'
#  194 | _gcry_sha256_transform_intel_shaext(u32 state[8],
#      | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
libgcrypt-1.9.4/cipher/sha256.c: scope_hint: At top level
cc1: note: unrecognized command-line option '-Wno-unknown-warning-option' may have been intended to silence earlier diagnostics
#  201|   {
#  202|     SHA256_CONTEXT *hd = ctx;
#  203|->   return _gcry_sha256_transform_intel_shaext (&hd->h0, data, nblks);
#  204|   }
#  205|   #endif

Error: COMPILER_WARNING:
libgcrypt-1.9.4/tests/fipsdrv.c: scope_hint: In function 'print_mpi_line'
libgcrypt-1.9.4/tests/fipsdrv.c:860:8: warning[-Wsequence-point]: operation on 'p' may be undefined
#  860 |      *p++ = tolower(*p);
#      |       ~^~
libgcrypt-1.9.4/tests/fipsdrv.c: scope_hint: At top level
cc1: note: unrecognized command-line option '-Wno-unknown-warning-option' may have been intended to silence earlier diagnostics
#  858|     p = buf;
#  859|     while (*p)
#  860|->      *p++ = tolower(*p);
#  861|     p = buf;
#  862|     if (no_lz && p[0] == '0' && p[1] == '0' && p[2])
